[build-system]
requires = [ "setuptools>=64.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "compass"
description = "A Package to Generate Coregistered Multi-temporal SAR SLC"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version", "optional-dependencies"]

[tool.setuptools.dynamic]
version = {attr = "compass.__version__"}

[project.urls]
Homepage = "https://github.com/opera-adt/compass"
"Bug Tracker" = "https://github.com/opera-adt/compass/issues"

# Entry points for the command line interface
[project.scripts]
"s1_cslc.py" = "compass.s1_cslc:main"
"s1_static_layers.py" = "compass.s1_static_layers:main"
"s1_geocode_stack.py" = "compass.s1_geocode_stack:main"
"validate_product.py" = "compass.utils.validate_product:main"

# extra requirements: `pip install compass[docs]` or `pip install .[docs]`
[tool.setuptools.dynamic.optional-dependencies.docs]
file = ["docs/requirements.txt"]
