[build-system]
requires = [ "setuptools>=64.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "compass"
description = "A Package to Generate Coregistered Multi-temporal SAR SLC"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version", "optional-dependencies"]

[tool.setuptools.dynamic]
version = {attr = "compass.__version__"}

[project.urls]
Homepage = "https://github.com/opera-adt/compass"
"Bug Tracker" = "https://github.com/opera-adt/compass/issues"

# Entry points for the command line interface
[project.scripts]
"s1_cslc.py" = "compass.s1_cslc:main"
"s1_static_layers.py" = "compass.s1_static_layers:main"
"s1_geocode_stack.py" = "compass.s1_geocode_stack:main"
"validate_product.py" = "compass.utils.validate_product:main"

# extra requirements: `pip install compass[docs]` or `pip install .[docs]`
[tool.setuptools.dynamic.optional-dependencies.docs]
file = ["docs/requirements.txt"]

# --------------------------------------------------------------------------- #
# Lint configuration (mirrors the checks Codacy runs on pull requests).
# Run locally before pushing with:  pre-commit run --all-files
# --------------------------------------------------------------------------- #
[tool.pylint.main]
py-version = "3.8"

[tool.pylint.messages_control]
disable = [
    "import-error",            # optional/heavy deps (osgeo, dem_stitcher) not always in the lint env
    "import-outside-toplevel", # deliberate lazy imports of optional/heavy deps
    "missing-module-docstring",
    "duplicate-code",
    "fixme",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
# Allow short names common in scientific/array code (x, y, dx, f, p, ...).
good-names = ["i", "j", "k", "n", "x", "y", "z", "dx", "dy", "nx", "ny", "f", "p", "ex", "_"]

[tool.pylint.design]
max-args = 10
max-positional-arguments = 10
max-locals = 25
max-statements = 70

[tool.bandit]
# Skip low-severity subprocess advisories on scripts that legitimately shell out.
skips = ["B404", "B603", "B607"]
