[metadata]
name = COMPASS
version = 0.1.0
description = Coregistered SLC workflow for Sentinel1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opera-adt/COMPASS
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License = file : LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires =
    setuptools
    importlib_resources

[options.package_data]
* = *.yaml

[options.packages.find]
where = src
